--- a/Tugas-Harian-Part-2/my-app/src/App.css
+++ b/Tugas-Harian-Part-2/my-app/src/App.css
@@ -14,20 +14,39 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #FFFFFF;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
-
+#formbeli {
+  border: double;
+}
 .App-link {
   color: #61dafb;
 }
+#tblContent {
+  border: 1px solid black;
+}
 
+#tblContent tr{
+  border: 1px solid black;
+}
+
+#tblContent th{
+  border: 1px solid black;
+   background-color: #808080;
+}
+
+#tblContent td{
+  border: 1px solid black;
+  background-color: #FFC31E;
+  
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
